--- a/src/assets/styles/components/Globales.scss
+++ b/src/assets/styles/components/Globales.scss
@@ -4,6 +4,7 @@ $color-main: #FF5A5F;
 $color-black: #000000;
 $color-claro: #ffffff;
 $color-gray: #d9d9d9;
+$background-footer: #f7f7f7;
 $description-card-size: 14px;
 $title-card-size: 20px;
 $fuente-primaria: 'Nunito', sans-serif;
