[upd]: Responsive style / Class to Arrow functions

--- a/src/assets/styles/Home.scss
+++ b/src/assets/styles/Home.scss
@@ -1,1 +1,7 @@
-@import './components/Globales.scss'
+@import './components/Globales.scss';
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+}
