--- a/src/assets/styles/components/CardOption.scss
+++ b/src/assets/styles/components/CardOption.scss
@@ -1,65 +1,111 @@
 @import './Globales.scss';
 
 .cardOption {
-  display: grid;
-  grid-template-columns: minmax(200px, 314px) 1fr;
-  box-sizing: border-box;
-  column-gap: 20px;
-  margin-bottom: 22px;
-  margin: 0 auto;
-  max-width: 778px;
-  height: 219px;
-  border-bottom: get-opacity($color-black, 0.8) 1px solid;
+
+  &__container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+  }
+
   &__link {
     color: $color-black;
+
     img {
-      height: 197px;
       width: 100%;
       border-radius: 20px;
     }
   }
+
   &__details {
     display: grid;
-    height: 219px;
-    grid-template-columns: 50% 25% 25%;
-    grid-template-rows: 50% 15% 35%;
+    grid-template-columns: 50% 40% 10%;
+    grid-template-rows: 40% 30% 30%;
+    padding: 20px 0;
+
     &--left {
+      grid-column: 1 / span 2;
+
       p {
         font-size: $description-card-size;
       }
+
       a {
-        font-family: $fuente-primaria;
+        font-family: $font-primary;
         text-decoration: none;
         font-size: $title-card-size;
         color: $color-black;
+
         h2 {
           font-weight: bold;
           margin: 20px 0;
         }
       }
+
       h3 {
-        font-family: $fuente-secundaria;
+        font-family: $font-secundary;
         font-size: $description-card-size;
         font-weight: 400;
         margin-bottom: 5px;
       }
+
+      span {
+        grid-row: 3 / span 2;
+      }
     }
+
     & img {
       grid-row: 1 / span 1;
       grid-column: 3 / span 1;
-      margin-top: 10px;
+      width: 20px;
     }
+
+    &--center {
+      grid-column: 1 / span 2;
+
+      p {
+        font-family: $font-secundary;
+        font-size: $description-card-size;
+      }
+    }
+
     &--right {
-      grid-column: 2 / span 2;
+      grid-column: 1 / span 3;
       grid-row: 3 / span 1;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: 50px;
+
+      .star-rating {
+        display: flex;
+        align-items: center;
+
+        figure {
+          width: 20px;
+          margin-right: 5px;
+
+          img {
+            margin: 0;
+            width: 100%;
+          }
+        }
+
+
+
+      }
+
+
       h3 {
         margin: 3px 0;
         margin-top: 10px;
         font-size: $description-card-size;
-        font-family: $fuente-secundaria;
+        font-family: $font-secundary;
         font-weight: 400;
+
         span {
-          font-weight: 600;
+          font-weight: 700;
+          margin-right: 5px;
         }
       }
     }
