--- a/src/assets/styles/components/Globales.scss
+++ b/src/assets/styles/components/Globales.scss
@@ -29,8 +29,30 @@ body {
 }
 
 h1 {
-    margin: 0;
-    padding: 0;
+    font-size: 40px;
+}
+
+h3 {
+    font-size: 30px;
+}
+
+h5 {
+    font-size: 18px;
+}
+
+a,
+p,
+input,
+span {
+    font-size: 16px;
+}
+
+small {
+    font-size: 12px;
+}
+
+img {
+    width: 100%;
 }
 
 main {
