--- a/src/assets/styles/pages/EventDetails.scss
+++ b/src/assets/styles/pages/EventDetails.scss
@@ -1,20 +1,18 @@
-@import './components/Globales.scss';
+@import '../vars';
 
 .event_details {
   padding: 20px 40px;
   display: grid;
   grid-template-rows: 30% 70%;
   align-content: space-between;
-  height: 100vh;
   gap: 20px;
 
-  &__carousel {}
 
   &__container {
     display: grid;
     grid-template-columns: 65% 35%;
+    grid-template-rows: 1fr;
     gap: 20px;
     justify-content: center;
-    align-items: center;
   }
 }
