--- a/src/assets/styles/components/CardPayment.scss
+++ b/src/assets/styles/components/CardPayment.scss
@@ -36,7 +36,7 @@
 
         h5,
         p {
-          padding: 5px;
+          padding-top: 5px;
         }
       }
 
@@ -47,8 +47,11 @@
           content: '';
           position: absolute;
           border-right: 1px solid;
-          width: 20px;
-          height: 65px;
+          height: 56px;
+
+          @media (max-width: 430px) {
+            display: none;
+          }
         }
       }
     }
