--- a/src/assets/styles/components/Footer.scss
+++ b/src/assets/styles/components/Footer.scss
@@ -18,6 +18,10 @@ footer {
       margin: 0 10px;
       display: flex;
       align-items: center;
+      a {
+        text-decoration: none;
+        color: $color-black;
+      }
     }
   }
 }
