--- a/src/assets/styles/components/CardPayment.scss
+++ b/src/assets/styles/components/CardPayment.scss
@@ -4,6 +4,7 @@
   background-color: $color-gray;
   border: 1px solid $color-black;
   border-radius: 20px;
+  margin-right: 150px;
 
   &__container {
     padding: 20px;
