--- a/src/assets/styles/components/CardDescription.scss
+++ b/src/assets/styles/components/CardDescription.scss
@@ -3,6 +3,8 @@
 .description {
   display: grid;
   grid-template-rows: 20% 20% 60%;
+  width: 80%;
+  margin-left: 50px;
 
   @media (max-width: 500px) {
     grid-template-rows: 15% 10% 75%;
