--- a/src/assets/styles/components/CardOption.scss
+++ b/src/assets/styles/components/CardOption.scss
@@ -1,12 +1,22 @@
 @import '../vars';
 
+
+.cards{
+  margin: 0;
+}
 .cardOption {
-  padding: 20px 0;
-  border-bottom: 2px solid $color-black;
-  margin-left: 40px;
+  margin-bottom: 100px;
+  margin: 0;
+  margin-bottom: 50px;
+
   &__container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    margin: 40px;
+    background-color: white;
+    border-radius: 20px;
+    border:1px solid black
+
   }
 
   &__link {
@@ -14,7 +24,7 @@
 
     img {
       width: 90%;
-      border-radius: 20px;
+      border-radius: 10px;
     }
   }
 
