--- a/src/assets/styles/components/CardPayment.scss
+++ b/src/assets/styles/components/CardPayment.scss
@@ -5,6 +5,7 @@
   border: 1px solid $color-black;
   border-radius: 20px;
   margin-right: 150px;
+  width: 100%;
 
   &__container {
     padding: 20px;
@@ -16,7 +17,7 @@
     p,
     span {
       font-size: 20px;
-      margin-left: 10px;
+      // margin-left: 10px;
     }
   }
 
@@ -48,7 +49,7 @@
           content: '';
           position: absolute;
           border-right: 1px solid;
-          height: 56px;
+          height: 63px;
 
           @media (max-width: 430px) {
             display: none;
