Cambio de clase en Events.* actualización de index.js y routes paso de event a events; Footer pequeñas correcciones.

--- a/src/assets/styles/components/Footer.scss
+++ b/src/assets/styles/components/Footer.scss
@@ -1,11 +1,12 @@
 @import '../vars';
+@import '../functions.scss';
 
-footer {
+.footer {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
   align-items: center;
-  border-top: 2px inset get-opacity($color-black, 0.7);
+  border-top: 2px solid get-opacity($color-black, 0.3);
   height: 70px;
   background-color: $background-footer;
 
