--- a/src/assets/styles/pages/Events.scss
+++ b/src/assets/styles/pages/Events.scss
@@ -15,7 +15,7 @@
       }
     }
 
-    .cardsOption {
+    .EventsCardsOption {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(300px, 700px));
     }
