--- a/src/assets/styles/components/CardBasic.scss
+++ b/src/assets/styles/components/CardBasic.scss
@@ -21,11 +21,15 @@
     text-decoration: none;
     cursor: pointer;
 
-    img {
+    figure {
       width: 100%;
-      height: 199px;
-      border-radius: 10px;
-      object-fit: cover;
+      margin: 0;
+      img {
+        width: 100%;
+        height: 199px;
+        border-radius: 10px;
+        object-fit: cover;
+      }
     }
 
     &--title {
