--- a/src/assets/styles/components/CardBasic.scss
+++ b/src/assets/styles/components/CardBasic.scss
@@ -1,12 +1,12 @@
 @import '../vars';
 
-.Superion{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  height: 500px;
-  margin-left: 30px;
+// .Superion{
+//   display: grid;
+//   grid-template-columns: 1fr 1fr 1fr;
+//   height: 500px;
+//   margin-left: 30px;
 
-}
+// }
 
 .card {
   max-width: 450px;
@@ -24,6 +24,7 @@
     figure {
       width: 100%;
       margin: 0;
+
       img {
         width: 100%;
         height: 199px;
