--- a/src/assets/styles/pages/Home.scss
+++ b/src/assets/styles/pages/Home.scss
@@ -1,5 +1,6 @@
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 20px;
+  padding: 20px;
 }
