--- a/src/assets/styles/components/PayForm.scss
+++ b/src/assets/styles/components/PayForm.scss
@@ -35,8 +35,12 @@
       box-sizing: border-box;
       border-radius: 10px;
     }
-    & p {
+    & label {
       margin: 12px 0;
+      font-weight: bold;
+    }
+    & p{
+      margin: 12px 10px;
       font-weight: bold;
     }
   }
