Data users Redux

--- a/src/assets/styles/components/Login.scss
+++ b/src/assets/styles/components/Login.scss
@@ -87,6 +87,9 @@
       display: flex;
       align-items: center;
       padding: 5px 0;
+      & figure {
+        width: min-content;
+      }
     }
   }
 
