--- a/src/assets/styles/_vars.scss
+++ b/src/assets/styles/_vars.scss
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap');
 
-$color-main: #FF5A5F;
-$color-black: #000000;
+$color-main: #ff6e6c;
+$color-black: #1f1235;
+$color-black-secundary: #1b1425;
 $color-white: #ffffff;
 $color-gray: #d9d9d9;
-$background-footer: #f7f7f7;
+$color-background: #f4effc;
+$color-secundary: #67568c;
 $description-card-size: 14px;
 $title-card-size: 20px;
 $font-primary: 'Nunito',
