--- a/src/assets/styles/components/Carousel.scss
+++ b/src/assets/styles/components/Carousel.scss
@@ -38,9 +38,13 @@
   }
 
   &__items {
-    width: 30%;
+    width: 40%;
     margin-right: 10px;
     display: flex;
+
+    @media screen and (max-width:768px) {
+      width: 80%;
+    }
 
     img {
       margin: 10px;
