--- a/src/assets/styles/pages/Home.scss
+++ b/src/assets/styles/pages/Home.scss
@@ -3,95 +3,135 @@
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
 }
-.mainTitle{
+
+.mainTitle {
   margin: 50px 0 50px 0;
   color: #FF5A5F;
   padding-left: 42px;
   width: 50%;
 }
-.nextEvents{  
+
+.nextEvents {
   display: grid;
-  grid-template-columns:1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   margin-bottom: 60px;
   padding: 0 42px;
-}
-.nextEvents div{
-  margin: 0px 10px 0px 0px;
+
+  div {
+    margin: 0px 10px 0px 0px;
+  }
 }
 
-.Categories{
+.Categories {
   display: grid;
-  grid-template-columns:1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   height: 100%;
   color: white;
   background: rgba(0, 0, 0, 0.7);
 }
-.mainCategory{
+
+.mainCategory {
   padding-top: 100px;
+
+  h4 {
+    text-align: justify;
+    width: 70%;
+    margin: auto;
+    margin-bottom: 30px;
+  }
 }
-.mainCategory h4{
-  text-align: justify;
-  width:70%;
-  margin: auto;
-  margin-bottom: 30px;
-}
-.mainCategory__card{
+
+.mainCategory__card {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.otherCategories{
+
+.otherCategories {
   display: grid;
-  grid-template-rows:1fr 1fr;
-  grid-template-columns:1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  height: 100%;
+
+  div {
+    margin: 10px;
+  }
+}
+.mainTitle h1{
+  animation-duration: 3s;
+  animation-name: TitleMoving;
+}
+@keyframes TitleMoving {
+  from {
+    margin-left: 50%;
+    width: 100%
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+.mainCategory-card .Superion .card {
+  margin: auto;
+  height: 350px;
+}
+
+.Home .Superion .card{
   height: 100%;
 }
-
-.otherCategories div{
-  margin:10px;
+.Home .Superion .card .card__details{
+  text-decoration: none;
+}
+.Home .Superion:hover{
+  transform: scale(1.1);
+  transition-duration: 2s,
+}
+.Categories .Superion .card{
+  text-align: center;
+}
+.Categories .Superion .card p{
+  display: none;
 }
 
-.mainCategory-card .Superion .card{
-  margin: auto;
-}
 
 
 
 @media (max-width: 980px) {
-  .mainTitle{
+  .mainTitle {
     text-align: center;
     width: 100%;
     margin: auto;
     margin-top: 40px;
     margin-bottom: 40px;
-
-  }
-  .nextEvents{  
-    display: grid;
-    grid-template-columns:1fr;
-    margin: auto;
-  }
-  .nextEvents div{  
-    margin: auto;
-    margin-bottom: 20px;
   }
 
-  .Categories{
+  .nextEvents {
     display: grid;
-    grid-template-columns:1fr;
+    grid-template-columns: 1fr;
+    margin: auto;
+
+    div {
+      margin: auto;
+      margin-bottom: 20px;
+    }
+  }
+
+  .Categories {
+    display: grid;
+    grid-template-columns: 1fr;
     height: 100%;
   }
 
-  .mainCategory{
+  .mainCategory {
     padding-top: 50px;
   }
 
-  .otherCategories{
+  .otherCategories {
     display: grid;
-    grid-template-columns:1fr;  
+    grid-template-columns: 1fr;
     height: 100%;
     margin: auto;
   }
-
- }
+}
 
